--- a/package.json
+++ b/package.json
@@ -5,23 +5,24 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "lint": "fumadocs-mdx && next lint",
+    "lint": "hanzo-docs-mdx && next lint",
     "start": "next start",
-    "types:check": "fumadocs-mdx && tsc --noEmit"
+    "types:check": "hanzo-docs-mdx && tsc --noEmit"
   },
   "dependencies": {
     "@zoo/brand": "file:../brand",
-    "@fumadocs/mdx-remote": "^1.2.0",
-    "fumadocs-core": "^15.0.0",
-    "fumadocs-mdx": "^12.0.0",
-    "fumadocs-ui": "^16.0.0",
+    "@hanzo/docs": "16.2.9",
+    "@hanzo/docs-core": "16.4.3",
+    "@hanzo/docs-base-ui": "16.4.3",
+    "@hanzo/docs-ui": "16.4.3",
+    "@hanzo/docs-mdx": "14.2.5",
     "lucide-react": "^0.561.0",
-    "next": "16.0.10",
+    "next": "^16.1.1",
     "next-themes": "^0.4.6",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "tailwind-merge": "^3.4.0",
-    "zod": "^4.1.13"
+    "shiki": "^3.20.0",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
@@ -31,8 +32,5 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3"
-  },
-  "browserslist": [
-    "extends browserslist-config-baseline/2024"
-  ]
+  }
 }
