--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,7 +36,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    ".source/**/*.ts",
+    ".docs/**/*.ts",
     ".next/dev/types/**/*.ts"
   ],
   "exclude": [
